Fix broken layout in login modal
Ensure our new column styling is only applied in the bug modal.

--- a/bzkanban.css
+++ b/bzkanban.css
@@ -240,16 +240,11 @@ body {
     align-self: stretch;
     font-size: x-large;
 }
-.modal-body {
-    flex-direction: row;
-}
-.modal-footer {
-    flex-direction: column;
-}
 .modal-body,
 .modal-footer {
     display: flex;
     padding: 15px;
+    flex-direction: column;
     align-self: stretch;
     min-height: 4vh;
     overflow-y: auto;
@@ -272,6 +267,9 @@ body {
 }
 .modal-footer button {
     align-self: flex-end;
+}
+#modalBug .modal-body {
+    flex-direction: row;
 }
 .bug-comments {
     display: flex;
